Chore & fix z-index

--- a/src/app/core/pure-components/pure-settings/pure-settings.component.scss
+++ b/src/app/core/pure-components/pure-settings/pure-settings.component.scss
@@ -1,6 +1,8 @@
 .pure-settings {
   .toolbar {
     box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.15), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
+    position: relative;
+    z-index: 10001;
     .close-btn {
       margin-right: -8px;
     }
